# clipboard-rs

./: Cargo.toml
examples/: watch_change.rs
src/: common.rs  lib.rs
src/platform/: win.rs  x11.rs
